--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,10 @@ debhelper (7.3.16) UNRELEASED; urgency=low
   * dh_installdocs: Loosen the Document field parsing, to accept
     everything doc-base *really* accepts in a doc id (not just what
     it's documented to accept). Closes: #543499
+  * Allow sequence addons to pass options to debhelper commands,
+    by adding add_command_options and remove_command_options to the interface.
+    Closes: #543392
+    (Modestas Vainius)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 24 Aug 2009 12:59:02 -0400
 
