--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ debhelper (7.3.16) UNRELEASED; urgency=low
     by adding add_command_options and remove_command_options to the interface.
     Closes: #543392
     (Modestas Vainius)
+  * dh_auto_install: Add a --destdir parameter that can be used to override
+    the default. Closes: #538201
+    (Modestas Vainius)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 24 Aug 2009 12:59:02 -0400
 
