--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.3.16) UNRELEASED; urgency=low
+debhelper (7.3.16) unstable; urgency=low
 
   * dh_desktop: Clarify in man page why it's a no-op.
     Closes: #543364
@@ -13,7 +13,7 @@ debhelper (7.3.16) UNRELEASED; urgency=low
     the default. Closes: #538201
     (Modestas Vainius)
 
- -- Joey Hess <joeyh@debian.org>  Mon, 24 Aug 2009 12:59:02 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 26 Aug 2009 17:10:53 -0400
 
 debhelper (7.3.15) unstable; urgency=low
 
