Optimise -s handling to avoid running dpkg-architecture if the package is arch all.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.3.17) UNRELEASED; urgency=low
+
+  * Optimise -s handling to avoid running dpkg-architecture if the package
+    is arch all.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 01 Sep 2009 13:19:55 -0400
+
 debhelper (7.3.16) unstable; urgency=low
 
   * dh_desktop: Clarify in man page why it's a no-op.
