--- a/doc/TODO
+++ b/doc/TODO
@@ -31,3 +31,4 @@ Deprecated:
   Need to wait a while (from Oct 2008) to ensure that most rules files
   that pass unknown options to commands are fixed.
 * dh_desktop, dh_scrollkeeper. Remove eventually..
+* -s flag, not formally deprecated yet; remove eventually
