--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.4.1) UNRELEASED; urgency=low
+
+  * Patch dh_installinit to handle upstart job files in preference over init
+    scripts, and provide compatibility symlinks in /etc/init.d for sysv-rc
+    implementations.  Closes: #536035.
+
+ -- Steve Langasek <vorlon@debian.org>  Thu, 06 Aug 2009 03:01:43 -0700
+
 debhelper (7.4.0) unstable; urgency=low
 
   * Optimise -s handling to avoid running dpkg-architecture if a package
