--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,7 @@
 debhelper (7.4.1) UNRELEASED; urgency=low
 
-  * Patch dh_installinit to handle upstart job files in preference over init
-    scripts, and provide compatibility symlinks in /etc/init.d for sysv-rc
-    implementations.  Closes: #536035.
+  * dh_installinit: Support upstart job files, and provide compatibility
+    symlinks in /etc/init.d for sysv-rc implementations.  Closes: #536035.
 
  -- Steve Langasek <vorlon@debian.org>  Thu, 06 Aug 2009 03:01:43 -0700
 
