--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 debhelper (7.4.1) UNRELEASED; urgency=low
 
+  [ Steve Langasek ]
   * dh_installinit: Support upstart job files, and provide compatibility
     symlinks in /etc/init.d for sysv-rc implementations.  Closes: #536035.
+
+  [ Joey Hess ]
+  * Add FILES sections to man pages. Closes: #545041 
 
  -- Steve Langasek <vorlon@debian.org>  Thu, 06 Aug 2009 03:01:43 -0700
 
