dh_prep(1): Clarify when it should be called. Closes: #544969

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ debhelper (7.4.1) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Add FILES sections to man pages. Closes: #545041 
+  * dh_prep(1): Clarify when it should be called. Closes: #544969
 
  -- Steve Langasek <vorlon@debian.org>  Thu, 06 Aug 2009 03:01:43 -0700
 
