--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.4.1) UNRELEASED; urgency=low
+debhelper (7.4.1) unstable; urgency=low
 
   [ Steve Langasek ]
   * dh_installinit: Support upstart job files, and provide compatibility
@@ -8,7 +8,7 @@ debhelper (7.4.1) UNRELEASED; urgency=low
   * Add FILES sections to man pages. Closes: #545041 
   * dh_prep(1): Clarify when it should be called. Closes: #544969
 
- -- Steve Langasek <vorlon@debian.org>  Thu, 06 Aug 2009 03:01:43 -0700
+ -- Joey Hess <joeyh@debian.org>  Sun, 06 Sep 2009 18:44:40 -0400
 
 debhelper (7.4.0) unstable; urgency=low
 
