Man page typo. Closes: #545443

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.2) UNRELEASED; urgency=low
+
+  * Man page typo. Closes: #545443
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 07 Sep 2009 12:48:39 -0400
+
 debhelper (7.4.1) unstable; urgency=low
 
   [ Steve Langasek ]
