--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (7.4.2) UNRELEASED; urgency=low
 
   * Man page typo. Closes: #545443
+  * dh: Remove duplicate dh_installcatalogs list. Closes: #545483
+    (It was only run once due to logging.)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 07 Sep 2009 12:48:39 -0400
 
