dh_installdocs: Add --link-doc option that can be used to link documentation directories. This is easier to use and more flexible than the old method of running dh_link first to make a broken symlink. Closes: #545676 Thanks, Colin Watson

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ debhelper (7.4.2) UNRELEASED; urgency=low
   * Man page typo. Closes: #545443
   * dh: Remove duplicate dh_installcatalogs list. Closes: #545483
     (It was only run once due to logging.)
+  * dh_installdocs: Add --link-doc option that can be used to link
+    documentation directories. This is easier to use and more flexible
+    than the old method of running dh_link first to make a broken symlink.
+    Closes: #545676 Thanks, Colin Watson
 
  -- Joey Hess <joeyh@debian.org>  Mon, 07 Sep 2009 12:48:39 -0400
 
