--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ debhelper (7.4.2) UNRELEASED; urgency=low
     documentation directories. This is easier to use and more flexible
     than the old method of running dh_link first to make a broken symlink.
     Closes: #545676 Thanks, Colin Watson
+  * Reorder dh_pysupport call in dh sequence to come before
+    dh_installinit, so the generated postinst script registers
+    python modules before trying to use them. Closes: #546293
 
  -- Joey Hess <joeyh@debian.org>  Mon, 07 Sep 2009 12:48:39 -0400
 
