--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.4.2) UNRELEASED; urgency=low
+debhelper (7.4.2) unstable; urgency=low
 
   * Man page typo. Closes: #545443
   * dh: Remove duplicate dh_installcatalogs list. Closes: #545483
@@ -14,7 +14,7 @@ debhelper (7.4.2) UNRELEASED; urgency=low
     to rules.d/<priority>-<name>, the same as debian/<name>.udev
     is installed for the first package. Closes: #546337
 
- -- Joey Hess <joeyh@debian.org>  Mon, 07 Sep 2009 12:48:39 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 14 Sep 2009 15:46:49 -0400
 
 debhelper (7.4.1) unstable; urgency=low
 
