dh_perl: Do not look at perl scripts under /usr/share/doc. Closes: #546683

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.4.3) UNRELEASED; urgency=low
+
+  * dh_perl: Do not look at perl scripts under /usr/share/doc.
+    Closes: #546683
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 15 Sep 2009 13:18:35 -0400
+
 debhelper (7.4.2) unstable; urgency=low
 
   * Man page typo. Closes: #545443
