Add dh_lintian french translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ debhelper (7.4.3) UNRELEASED; urgency=low
   [ Valery Perrin ]
   * update french translation. Closes: #494300, #477703
   * add --previous at po4a command into Makefile
-  * add dh, dh_auto_install, dh_auto_clean, dh_auto_configure, dh_auto_install, dh_auto_test, dh_bugfiles, dh_icons, dh_installifupdown, dh_installudev, dh_prep into po4a.cfg manpages list
+  * add dh, dh_auto_install, dh_auto_clean, dh_auto_configure, dh_auto_install, dh_auto_test, dh_bugfiles, dh_icons, dh_installifupdown, dh_installudev, dh_lintian, dh_prep into po4a.cfg manpages list
   
   [ Joey Hess ]
   * dh_perl: Do not look at perl scripts under /usr/share/doc.
