Allow dpkg-architecture to print errors to stderr. Closes: #548636

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ debhelper (7.4.3) UNRELEASED; urgency=low
   [ Joey Hess ]
   * dh_perl: Do not look at perl scripts under /usr/share/doc.
     Closes: #546683
+  * Allow dpkg-architecture to print errors to stderr. Closes: #548636
 
  -- Joey Hess <joeyh@debian.org>  Tue, 15 Sep 2009 13:18:35 -0400
 
