fix a spelling mistake in dh_makeshlibs man french translation (#494300 part 2)

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debhelper (7.4.3) UNRELEASED; urgency=low
   * add dh, dh_auto_install, dh_auto_clean, dh_auto_configure,
     dh_auto_install, dh_auto_test, dh_bugfiles, dh_icons, dh_installifupdown,
     dh_installudev, dh_lintian, dh_prep into po4a.cfg manpages list
+  * fix a spelling mistake in dh_makeshlibs man french
+    translation (#494300 part 2)
   
   [ Joey Hess ]
   * dh_perl: Do not look at perl scripts under /usr/share/doc.
