--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -5819,8 +5819,8 @@ msgid ""
 "libraries, and generates a shlibs file for the libraries it finds."
 msgstr ""
 "dh_makeshlibs est le programme de la suite debhelper qui automatise la "
-"recherche des bibliothèques partagées et produit un fichiers « shlibs » pour "
-"celles qu'il a trouvées."
+"recherche des bibliothèques partagées et produit un fichier « shlibs » pour "
+"celles qu'il trouve."
 
 # type: textblock
 #: dh_makeshlibs:21
