--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.4.3) UNRELEASED; urgency=low
+debhelper (7.4.3) unstable; urgency=low
 
   [ Valery Perrin ]
   * update french translation. Closes: #494300, #477703
@@ -13,10 +13,10 @@ debhelper (7.4.3) UNRELEASED; urgency=low
   * Allow dpkg-architecture to print errors to stderr. Closes: #548636
   * python_distutils: Run default python last, not first, and pass --force
     to setup.py install to ensure that timestamps do not prevent installation
-    of the scripts built for the default python, without versioned shebang
+    of the scripts built for the default python, with unversioned shebang
     lines. Closes: #547510 (Thanks, Andrew Straw)
 
- -- Joey Hess <joeyh@debian.org>  Tue, 15 Sep 2009 13:18:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 01 Oct 2009 14:37:38 -0400
 
 debhelper (7.4.2) unstable; urgency=low
 
