Support parallel building in makefile buildsystem
1) Add routine to Dh_Lib (used by dh and makefile.pm) which is capable of
detecting make jobserver and job control options from the MAKEFLAGS environment
variable. It also generates and returns a clean up MAKEFLAGS from these
options.

2) Add --parallel option to build system framework which allows source packages
to specify that they support parallel building. Optional value for this option is
the number of maximum parallel process to allow. However, the actual number of
parallel process (if any) for the specific build is determined from
DEB_BUILD_OPTIONS env variable as specified by Debian Policy.

By default (no --parallel option) parallel is neither enabled nor disabled
(depends on the external environment). However, dh may pass --parallel to
dh_auto_* implicitly in case 4) described below.

3) Add parallel support for makefile buildsystem. This implementation
forcefully starts a new make job server (or disables parallel) for the number
of process requested. If --parallel was not passed to the build system at all,
the build system will only clean up MAKEFLAGS from stale jobserver options to
avoid pointless make warnings.

4) If dh detects that it is being run by dpkg-buildpackage -jX and it is NOT
run with "+" prefix from debian/rules (i.e. jobserver is not reachable), it
enables --parallel implicitly. This closes: #532805.

Signed-off-by: Modestas Vainius <modestas@vainius.eu>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -205,6 +205,24 @@ If the build system prefers out of source tree building but still
 allows in source building, the latter can be re-enabled by passing a build
 directory path that is the same as the source directory path.
 
+=item B<-j>[I<maximum>], B<--parallel>[I<=maximum>]
+
+Indicate that a source package supports building using multiple parallel
+processes. However, the package will be built in this mode only if the build
+system supports this feature and tag I<parallel=n> is present in the
+DEB_BUILD_OPTIONS environment variable (as per Debian Policy section 4.9.1).
+The number of spawned parallel processes will be the smallest value of I<n>,
+I<maximum> (if specified) or a build system specific limit.
+
+If value of I<maximum> is 1, parallel building will be forcefully disabled.
+Such construct can be used to negate effects of the previously specified
+I<--parallel> option.
+
+If I<--parallel> is not specified, a debhelper build system will neither
+attempt to enforce nor prevent parallel building. This typically means a source
+package does not to support parallel building or enforces it in other ways
+(e.g. by modifying MAKEFLAGS manually).
+
 =item B<--list>, B<-l>
 
 List all build systems supported by debhelper on this system. The list
