--- a/debhelper.pod
+++ b/debhelper.pod
@@ -208,20 +208,15 @@ directory path that is the same as the source directory path.
 =item B<-j>[I<maximum>], B<--parallel>[I<=maximum>]
 
 Indicate that a source package supports building using multiple parallel
-processes. However, the package will be built in this mode only if the build
-system supports this feature and tag I<parallel=n> is present in the
-DEB_BUILD_OPTIONS environment variable (as per Debian Policy section 4.9.1).
-The number of spawned parallel processes will be the smallest value of I<n>,
-I<maximum> (if specified) or a build system specific limit.
+processes. This only enables parallel building if the build system supports
+it, and I<parallel=n> is present in the DEB_BUILD_OPTIONS environment
+variable (as per Debian Policy section 4.9.1).
 
-If value of I<maximum> is 1, parallel building will be forcefully disabled.
-Such construct can be used to negate effects of the previously specified
-I<--parallel> option.
-
-If I<--parallel> is not specified, a debhelper build system will neither
-attempt to enforce nor prevent parallel building. This typically means a source
-package does not to support parallel building or enforces it in other ways
-(e.g. by modifying MAKEFLAGS manually).
+The number of parallel processes will be the smaller value specified by
+I<--parallel>, DEB_BUILD_OPTIONS, or a build system specific limit.
+So, I<--parallel=1> can be used to disable parallel building, or a larger
+number can be specified if a package is known to only successfully build
+with a limited number of parallel processes.
 
 =item B<--list>, B<-l>
 
