--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+debhelper (7.4.4) UNRELEASED; urgency=low
+
+  * dh_auto_*: Add --parallel option that indicates the package supports
+    parallel building. Then if DH_BUILD_OPTIONS contains 'parallel=N',
+    and the build system supports it, parallel building is done.
+  * The makefile buildsystem (and derived buildsystems) now supports
+    parallel building.
+  * dh: If --parallel is not explicitly specified, enable it anyway.
+    Closes: #532805.
+  * Thanks, Modestas Vainius for most of the work on parallel build support.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
+
 debhelper (7.4.3) unstable; urgency=low
 
   [ Valery Perrin ]
