remove implicit --parallel setting by dh

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,8 @@ debhelper (7.4.4) UNRELEASED; urgency=low
     and the build system supports it, parallel building is done.
   * The makefile buildsystem (and derived buildsystems) now supports
     parallel building.
-  * dh: If --parallel is not explicitly specified, enable it anyway.
-    Closes: #532805.
+  * Typically, to enable parallel building, the --parallel option will
+    be passed to dh. Closes: #532805
   * Thanks, Modestas Vainius for most of the work on parallel build support.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
