--max-parallel requires a number

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -205,7 +205,7 @@ If the build system prefers out of source tree building but still
 allows in source building, the latter can be re-enabled by passing a build
 directory path that is the same as the source directory path.
 
-=item B<--max-parallel>[I<=maximum>]
+=item B<--max-parallel>I<=maximum>
 
 By default, the DEB_BUILD_OPTIONS environment variable can be used to
 enable parallel building, when supported by the build system.
