--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,8 @@ debhelper (7.4.4) UNRELEASED; urgency=low
     building, while --max-parallel=N will limit the maximum number of
     parallel processes that can be specified via DEB_BUILD_OPTIONS.
   * Added some hacks to avoid warnings about unavailable jobservers when
-    debhelper runs make.
+    debhelper runs make, and the parent debian/rules was run in parallel
+    mode (as dpkg-buildpackage -j currently does).
   * Thanks, Modestas Vainius for much of the work on parallel build support.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
