Add deprecation warnings for -u to the documentation, since putting options after -- is much more sane. (However, -u will not go away any time soon.) Closes: #554509

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ debhelper (7.4.4) UNRELEASED; urgency=low
     debhelper runs make, and the parent debian/rules was run in parallel
     mode (as dpkg-buildpackage -j currently does).
   * Thanks, Modestas Vainius for much of the work on parallel build support.
+  * Add deprecation warnings for -u to the documentation, since putting
+    options after -- is much more sane. (However, -u will not go away any
+    time soon.) Closes: #554509
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
 
