--- a/doc/TODO
+++ b/doc/TODO
@@ -32,3 +32,4 @@ Deprecated:
   that pass unknown options to commands are fixed.
 * dh_desktop, dh_scrollkeeper. Remove eventually..
 * -s flag, not formally deprecated yet; remove eventually
+* -u flag; add a warning on use and remove eventually
