--- a/doc/TODO
+++ b/doc/TODO
@@ -24,9 +24,9 @@ Deprecated:
 * dh_testversion. Remove as soon as nothing uses it.
 * dh_movefiles. I won't hold my breath.
 * dh_undocumented
-* dh_installinit --init-script
+* dh_installinit --init-script (make it warn)
 * dh_python
-* dh_clean -k (make it warn)
+* dh_clean -k (make it warn (need to make alien not use it 1st!))
 * Convert warning about unknown command-line options back to an error.
   Need to wait a while (from Oct 2008) to ensure that most rules files
   that pass unknown options to commands are fixed.
