Adjust code to add deprecation warning for compatability level 4. (Man page already said it was deprecated.) Closes: #555899

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ debhelper (7.4.4) UNRELEASED; urgency=low
     time soon.) Closes: #554509
   * Drop deprecated programs from the list of commands in debhelper(7).
     Closes: #548382
+  * Adjust code to add deprecation warning for compatability level 4.
+    (Man page already said it was deprecated.) Closes: #555899
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
 
