--- a/debian/changelog
+++ b/debian/changelog
@@ -14,7 +14,7 @@ debhelper (7.4.4) UNRELEASED; urgency=low
   * Add deprecation warnings for -u to the documentation, since putting
     options after -- is much more sane. (However, -u will not go away any
     time soon.) Closes: #554509
-  * Drop deprecated programs from the list of commands in debhelper(7).
+  * Separate deprecated programs in the list of commands in debhelper(7).
     Closes: #548382
   * Adjust code to add deprecation warning for compatability level 4.
     (Man page already said it was deprecated.) Closes: #555899
