dh_installdocs: Warn if a doc-base file cannot be parsed to find a document id. Closes: #555677

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ debhelper (7.4.4) UNRELEASED; urgency=low
     Closes: #548382
   * Adjust code to add deprecation warning for compatability level 4.
     (Man page already said it was deprecated.) Closes: #555899
+  * dh_installdocs: Warn if a doc-base file cannot be parsed to find a
+    document id. Closes: #555677
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
 
