--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ debhelper (7.4.4) UNRELEASED; urgency=low
     (Man page already said it was deprecated.) Closes: #555899
   * dh_installdocs: Warn if a doc-base file cannot be parsed to find a
     document id. Closes: #555677
+  * Typo. Closes: #555659
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
 
