cmake: Set CTEST_OUTPUT_ON_FAILURE when running test suite. Closes: #555807

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ debhelper (7.4.4) UNRELEASED; urgency=low
   * dh_installdocs: Warn if a doc-base file cannot be parsed to find a
     document id. Closes: #555677
   * Typo. Closes: #555659
+  * cmake: Set CTEST_OUTPUT_ON_FAILURE when running test suite.
+    Closes: #555807
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
 
