--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 debhelper (7.4.4) UNRELEASED; urgency=low
 
-  * The makefile buildsystem (and derived buildsystems) now supports
-    parallel building by default, as specified via DEB_BUILD_OPTIONS.
-    Closes: #532805
+  * The makefile buildsystem (and derived buildsystems cmake, autoconf, etc)
+    now supports parallel building by default, as specified via
+    DEB_BUILD_OPTIONS. Closes: #532805
   * dh_auto_*: Add --max-parallel option that can be used to control
     or disable parallel building. --max-parallel=1 will disable parallel
     building, while --max-parallel=N will limit the maximum number of
