cute tail display of config.log, to include a header

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,7 +23,7 @@ debhelper (7.4.4) UNRELEASED; urgency=low
   * Typo. Closes: #555659
   * cmake: Set CTEST_OUTPUT_ON_FAILURE when running test suite.
     Closes: #555807 (Modestas Vainius)
-  * autoconf: If configure fails, cat config.log. Intended to make
+  * autoconf: If configure fails, display config.log. Intended to make
     it easier to debug configure script failures on autobuilders.
     Closes: #556384
 
