--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,10 @@ debhelper (7.4.4) UNRELEASED; urgency=low
   * autoconf: If configure fails, display config.log. Intended to make
     it easier to debug configure script failures on autobuilders.
     Closes: #556384
+  * Improve build system autoselection process; this allows cmake to be
+    autoselected for steps after configure, instead of falling back to
+    makefile once cmake generated a makefile. Closes: #555805
+    (Modestas Vainius)
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
 
