--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.5) unstable; urgency=low
+
+  * ant: Fix auto-selection breakage. Closes: #557006 (Cyril Brulebois)
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 19 Nov 2009 11:53:39 -0500
+
 debhelper (7.4.4) unstable; urgency=low
 
   * The makefile buildsystem (and derived buildsystems cmake, autoconf, etc)
