--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.6) UNRELEASED; urgency=low
+
+  * Update --list to reflect buildsystem autoselection changes.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 19 Nov 2009 14:48:03 -0500
+
 debhelper (7.4.5) unstable; urgency=low
 
   * ant: Fix auto-selection breakage. Closes: #557006 (Cyril Brulebois)
