--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (7.4.6) UNRELEASED; urgency=low
 
   * Update --list to reflect buildsystem autoselection changes.
+  * Remove last vestiages of support for /usr/X11R6.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 19 Nov 2009 14:48:03 -0500
 
