--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-debhelper (7.4.6) UNRELEASED; urgency=low
+debhelper (7.4.6) unstable; urgency=low
 
   * Update --list to reflect buildsystem autoselection changes.
   * Remove last vestiages of support for /usr/X11R6.
+  * cmake: Fix deep recursion in test. Closes: #557299
 
- -- Joey Hess <joeyh@debian.org>  Thu, 19 Nov 2009 14:48:03 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 21 Nov 2009 13:08:48 -0500
 
 debhelper (7.4.5) unstable; urgency=low
 
