dh: Document --no-act. Closes: #557505

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.8) UNRELEASED; urgency=low
+
+  * dh: Document --no-act. Closes: #557505
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 22 Nov 2009 13:32:50 -0500
+
 debhelper (7.4.7) unstable; urgency=low
 
   * make: Avoid infinite make recursion that occurrs when testing existence
