dh_makeshlibs: Make -X also exclude libraries from the symbols file. Closes: #557603 (Peter Samuelson)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (7.4.8) UNRELEASED; urgency=low
 
   * dh: Document --no-act. Closes: #557505
+  * dh_makeshlibs: Make -X also exclude libraries from the symbols file.
+    Closes: #557603 (Peter Samuelson)
 
  -- Joey Hess <joeyh@debian.org>  Sun, 22 Nov 2009 13:32:50 -0500
 
