--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 debhelper (7.4.8) UNRELEASED; urgency=low
 
+  * Parallel building support is no longer enabled by default. It can still
+    be enabled by using the --max-parallel option. This was necessary because
+    some buildds build with -j2 by default.
   * dh: Document --no-act. Closes: #557505
   * dh_makeshlibs: Make -X also exclude libraries from the symbols file.
     Closes: #557603 (Peter Samuelson)
